[project]
name = "cloud-control"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.24.2",
    "boto3>=1.40.18",
    "click>=8.2.1",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "structlog>=25.5.0",
    "ty>=0.0.17",
    "types-boto3-ec2>=1.42.15",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.12.12",
    "types-aiobotocore>=2.24.2",
    "types-boto3>=1.42.19",
    "types-boto3-secretsmanager>=1.42.8",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cloud-control= "cloud_control.cli:main"
